--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 	<!-- Custom CSS -->
 	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/button.css" rel="stylesheet" type="text/css">
 
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -41,7 +42,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container">
-			<a class="navbar-brand" href="#">COVID -19 RESOURCE FINDER</a>
+			<a class="navbar-brand" href="index.html">COVID -19 RESOURCE FINDER</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
 				aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -53,7 +54,7 @@
 						<a class="nav-link" href="#">GROCERIES & VEGE</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">GAS</a>
+						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">MEDICINES</a>
@@ -210,9 +211,6 @@
 	<!-- Plugin JavaScript -->
 
 	<!-- Main Scripts -->
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 
 </body>
