--- a/fruits-&-vegetables-vendors.html
+++ b/fruits-&-vegetables-vendors.html
@@ -72,20 +72,20 @@
 		<!-- Main -->
 		<div id="main" class="container">
 			<div class="inner container">
-				<section id="gas-vendors" style="margin-top: 5em;">
+				<section id="fruits-&-vegetables-vendors" style="margin-top: 5em;">
 					<div class="row">
 						<div class="col-12">
-							<h2 class="type-2-heading"> Gas Vendors</h2>
+							<h2 class="type-2-heading"> Fruits & Vegetables Vendors</h2>
 							<p>*** Please note that, We cannot vouch for any of these vendors, please use caution. Also
 								cannot promise they will pick up the phone and / or deliver as promised. This is merely
 								a list prepared for your convenience.</p>
 						</div>
 					</div>
 					<table
-						id="gas-table"
+						id="fruits-&-vegetables-table"
 						data-toggle="table"
 						data-remember-order="true"
-						data-url="vendors/gas-vendors.json"
+						data-url="vendors/fruits-&-vegetables-vendors.json"
 						data-pagination="true"
 						data-pagination-loop="false"
 						data-page-size="25"
@@ -99,6 +99,7 @@
 								<th data-field="district" data-sortable="true">District</th>
 								<th data-field="areaServed" data-sortable="true">Area Served</th>
 								<th data-field="vendor" data-sortable="true">Vendor</th>
+								<th data-field="itemType" data-sortable="true">Item Type</th>
 								<th data-field="contactDetails">Contact Details</th>
 							</tr>
 						</thead>
