--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta name="HandheldFriendly" content="true">
 	<!-- Page Title -->
-	<title>Covid-19 | Sri Lanka Vendor List</title>
+	<title>Covid-19-SL | Resource Finder</title>
 	<meta name="author" content="All the Sri Lankans" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -44,20 +44,23 @@
 		<div class="container">
 			<a class="navbar-brand" href="index.html">COVID -19 RESOURCE FINDER</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
-				aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+				aria-controls="navbarsExample" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
-			<div class="collapse navbar-collapse" id="navbarsExample07">
+			<div class="collapse navbar-collapse" id="navbarsExample">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">GROCERIES & VEGE</a>
+						<a class="nav-link" href="grocery-vendors.html">GROCERIES</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="fruits-&-vegetables-vendors.html">FRUITS & VEGETABLES</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">MEDICINES</a>
+						<a class="nav-link" href="gas-vendors.html">MEAT & FISH</a>
 					</li>
 				</ul>
 			</div>
@@ -144,17 +147,27 @@
 					<div class="row">
 						<div class="col-md-4">
 							<div id="vendor-category-01" class="vendor-category">
-								<a href="">
+								<a href="grocery-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/groceries-&-vegetables-01.png" alt="Groceries & vegetables" style="width:100%; height:auto;">
-										<h2 class="category-title"><strong>Groceries & vegetables</strong></h2>
+										<img class="image" src="images/groceries-&-vegetables-01.png" alt="Groceries" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Groceries</strong></h2>
 									</div>
 								</a>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div id="vendor-category-02" class="vendor-category">
-								<a href="">
+								<a href="fruits-&-vegetables-vendors.html">
+									<div class="square vendor-category-square">
+										<img class="image" src="images/fruits-&-vegetables-01.png" alt="Fruits & Vegetables" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Fruits & Vegetables</strong></h2>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div id="vendor-category-03" class="vendor-category">
+								<a href="gas-vendors.html">
 									<div class="square vendor-category-square">
 										<img class="image" src="images/gas-01.png" alt="Gas" style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Gas</strong></h2>
@@ -162,12 +175,24 @@
 								</a>
 							</div>
 						</div>
+					</div>
+					<div class="row">
 						<div class="col-md-4">
-							<div id="vendor-category-03" class="vendor-category">
-								<a href="">
+							<div id="vendor-category-04" class="vendor-category">
+								<a href="meat-&-fish-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/medicines-01.png" alt="Medicines" style="width:100%; height:auto;">
-										<h2 class="category-title"><strong>Medicines</strong></h2>
+										<img class="image" src="images/fish-&-meat-01.png" alt="Meat, Fish, Egg & Sprats" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Meat/Fish/Egg/<br />Sprats</strong></h2>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div id="vendor-category-05" class="vendor-category">
+								<a href="bakery-items-vendors.html">
+									<div class="square vendor-category-square">
+										<img class="image" src="images/bakery-items-01.png" alt="Bakery Items" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Bakery Items</strong></h2>
 									</div>
 								</a>
 							</div>
