--- a/meat-&-fish-vendors.html
+++ b/meat-&-fish-vendors.html
@@ -11,7 +11,7 @@
 		content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta name="HandheldFriendly" content="true">
 	<!-- Page Title -->
-	<title>Covid-19-SL | Gas Vendors List</title>
+	<title>Covid-19-SL | Meat & Fish Vendors List</title>
 	<meta name="author" content="All the Sri Lankans" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -56,10 +56,10 @@
 					<li class="nav-item">
 						<a class="nav-link" href="">FRUITS & VEGETABLES</a>
 					</li>
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="gas-vendors.html">MEAT & FISH</a>
 					</li>
 				</ul>
@@ -72,20 +72,20 @@
 		<!-- Main -->
 		<div id="main" class="container">
 			<div class="inner container">
-				<section id="gas-vendors" style="margin-top: 5em;">
+				<section id="meat-&-fish-vendors" style="margin-top: 5em;">
 					<div class="row">
 						<div class="col-12">
-							<h2 class="type-2-heading"> Gas Vendors</h2>
+							<h2 class="type-2-heading"> Meat, Fish, Egg & Sprats Vendors</h2>
 							<p>*** Please note that, We cannot vouch for any of these vendors, please use caution. Also
 								cannot promise they will pick up the phone and / or deliver as promised. This is merely
 								a list prepared for your convenience.</p>
 						</div>
 					</div>
 					<table
-						id="gas-table"
+						id="meat-&-fish-table"
 						data-toggle="table"
 						data-remember-order="true"
-						data-url="vendors/gas-vendors.json"
+						data-url="vendors/meat-&-fish-vendors.json"
 						data-pagination="true"
 						data-pagination-loop="false"
 						data-page-size="25"
@@ -99,6 +99,7 @@
 								<th data-field="district" data-sortable="true">District</th>
 								<th data-field="areaServed" data-sortable="true">Area Served</th>
 								<th data-field="vendor" data-sortable="true">Vendor</th>
+								<th data-field="itemType" data-sortable="true">Item Type</th>
 								<th data-field="contactDetails">Contact Details</th>
 							</tr>
 						</thead>
