--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta name="HandheldFriendly" content="true">
 	<!-- Page Title -->
-	<title>Covid-19-SL | Resource Finder</title>
+	<title>Covid19-SL | Resource Finder</title>
 	<meta name="author" content="All the Sri Lankans" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -42,7 +42,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">COVID -19 RESOURCE FINDER</a>
+			<a class="navbar-brand" href="index.html">COVID19 RESOURCE FINDER</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
 				aria-controls="navbarsExample" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -193,6 +193,60 @@
 									<div class="square vendor-category-square">
 										<img class="image" src="images/bakery-items-01.png" alt="Bakery Items" style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Bakery Items</strong></h2>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div id="vendor-category-06" class="vendor-category">
+								<a href="dairy-products-vendors.html">
+									<div class="square vendor-category-square">
+										<img class="image" src="images/dairy-products-01.png" alt="Dairy Products" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Dairy Products</strong></h2>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<div id="vendor-category-07" class="vendor-category">
+								<a href="water-bottle-vendors.html">
+									<div class="square vendor-category-square">
+										<img class="image" src="images/water-01.png" alt="Water" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Water</strong></h2>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div id="vendor-category-08" class="vendor-category">
+								<a href="medicines-vendors.html">
+									<div class="square vendor-category-square">
+										<img class="image" src="images/medicines-01.png" alt="Medicines" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Medicines</strong></h2>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div id="vendor-category-09" class="vendor-category">
+								<a href="cooked-meals-vendors.html">
+									<div class="square vendor-category-square">
+										<img class="image" src="images/cooked-meals-01.png" alt="Cooked Meals" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Cooked Meals</strong></h2>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<div id="vendor-category-10" class="vendor-category">
+								<a href="pet-food-vendors.html">
+									<div class="square vendor-category-square">
+										<img class="image" src="images/pet-foods-01.png" alt="Pet Foods" style="width:100%; height:auto;">
+										<h2 class="category-title"><strong>Pet Foods</strong></h2>
 									</div>
 								</a>
 							</div>
