--- a/medicines-vendors.html
+++ b/medicines-vendors.html
@@ -101,6 +101,7 @@
 								<th data-field="vendor" data-sortable="true">Vendor</th>
 								<th data-field="itemType" data-sortable="true">Item Type</th>
 								<th data-field="contactDetails">Contact Details</th>
+								<th data-field="whatsapp">WhatsApp</th>
 							</tr>
 						</thead>
 					</table>
