--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html lang="en_US" prefix="og: http://ogp.me/ns#">
 
 <head>
@@ -11,10 +10,33 @@
 		content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta name="HandheldFriendly" content="true">
 	<!-- Page Title -->
-	<title>Covid19-SL | Resource Finder</title>
-	<meta name="author" content="All the Sri Lankans" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
+	<title>Covid 19 - Sri Lankan Resource Finder</title>
+	<meta name="author" content="Covid 19 - Sri Lankan Resource Finder" />
+	<meta name="description" content="A community powered COVID-19 vendor tracker for Sri Lanka." />
+	<meta name="keywords" content="A community powered COVID-19 vendor tracker for Sri Lanka." />
+
+	<link rel="canonical" href="https://lk.covid19resourcefinder.com/">
+	<meta property="og:title" content="Covid 19 - Sri Lankan Resource Finder" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://lk.covid19resourcefinder.com/" />
+	<meta property="og:locale" content="en_US" />
+	<meta property="og:site_name" content="Covid 19 - Sri Lankan Resource Finder">
+	<meta property="og:image"
+		content="https://lk.covid19resourcefinder.com/images/covid-19-sri-lankan-resource-finder-banner-01.png" />
+	<meta property="og:image:type" content="image/png" />
+	<meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="630" />
+	<meta property="og:image:alt" content="A community powered COVID-19 vendor tracker for Sri Lanka." />
+	<meta property="og:description" content="A community powered COVID-19 vendor tracker for Sri Lanka." />
+
+	<meta property="twitter:card" content="summary" />
+	<meta property="twitter:url" content="https://lk.covid19resourcefinder.com/" />
+	<meta property="twitter:title" content="Covid 19 - Sri Lankan Resource Finder" />
+	<meta property="twitter:image"
+		content="https://lk.covid19resourcefinder.com/images/covid-19-sri-lankan-resource-finder-banner-01.png" />
+	<meta property="twitter:description" content="A community powered COVID-19 vendor tracker for Sri Lanka." />
+
+
 	<!-- Appearance -->
 	<meta name="theme-color" content="#1400AD">
 	<!-- Favicon -->
@@ -35,6 +57,20 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145115788-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-145115788-2');
+	</script>
+
+
 
 </head>
 
@@ -42,7 +78,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">COVID19 RESOURCE FINDER</a>
+			<a class="navbar-brand" href="index.html">COVID 19 RESOURCE FINDER</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
 				aria-controls="navbarsExample" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -60,7 +96,10 @@
 						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="gas-vendors.html">MEAT & FISH</a>
+						<a class="nav-link" href="medicines-vendors.html">MEDICINES</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="">ABOUT</a>
 					</li>
 				</ul>
 			</div>
@@ -149,7 +188,8 @@
 							<div id="vendor-category-01" class="vendor-category">
 								<a href="grocery-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/groceries-&-vegetables-01.png" alt="Groceries" style="width:100%; height:auto;">
+										<img class="image" src="images/groceries-&-vegetables-01.png" alt="Groceries"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Groceries</strong></h2>
 									</div>
 								</a>
@@ -159,7 +199,8 @@
 							<div id="vendor-category-02" class="vendor-category">
 								<a href="fruits-&-vegetables-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/fruits-&-vegetables-01.png" alt="Fruits & Vegetables" style="width:100%; height:auto;">
+										<img class="image" src="images/fruits-&-vegetables-01.png"
+											alt="Fruits & Vegetables" style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Fruits & Vegetables</strong></h2>
 									</div>
 								</a>
@@ -169,7 +210,8 @@
 							<div id="vendor-category-03" class="vendor-category">
 								<a href="gas-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/gas-01.png" alt="Gas" style="width:100%; height:auto;">
+										<img class="image" src="images/gas-01.png" alt="Gas"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Gas</strong></h2>
 									</div>
 								</a>
@@ -181,7 +223,8 @@
 							<div id="vendor-category-04" class="vendor-category">
 								<a href="meat-&-fish-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/fish-&-meat-01.png" alt="Meat, Fish, Egg & Sprats" style="width:100%; height:auto;">
+										<img class="image" src="images/fish-&-meat-01.png"
+											alt="Meat, Fish, Egg & Sprats" style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Meat/Fish/Egg/<br />Sprats</strong></h2>
 									</div>
 								</a>
@@ -191,7 +234,8 @@
 							<div id="vendor-category-05" class="vendor-category">
 								<a href="bakery-items-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/bakery-items-01.png" alt="Bakery Items" style="width:100%; height:auto;">
+										<img class="image" src="images/bakery-items-01.png" alt="Bakery Items"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Bakery Items</strong></h2>
 									</div>
 								</a>
@@ -201,7 +245,8 @@
 							<div id="vendor-category-06" class="vendor-category">
 								<a href="dairy-products-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/dairy-products-01.png" alt="Dairy Products" style="width:100%; height:auto;">
+										<img class="image" src="images/dairy-products-01.png" alt="Dairy Products"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Dairy Products</strong></h2>
 									</div>
 								</a>
@@ -213,7 +258,8 @@
 							<div id="vendor-category-07" class="vendor-category">
 								<a href="water-bottle-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/water-01.png" alt="Water" style="width:100%; height:auto;">
+										<img class="image" src="images/water-01.png" alt="Water"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Water</strong></h2>
 									</div>
 								</a>
@@ -223,7 +269,8 @@
 							<div id="vendor-category-08" class="vendor-category">
 								<a href="medicines-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/medicines-01.png" alt="Medicines" style="width:100%; height:auto;">
+										<img class="image" src="images/medicines-01.png" alt="Medicines"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Medicines</strong></h2>
 									</div>
 								</a>
@@ -233,7 +280,8 @@
 							<div id="vendor-category-09" class="vendor-category">
 								<a href="cooked-meals-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/cooked-meals-01.png" alt="Cooked Meals" style="width:100%; height:auto;">
+										<img class="image" src="images/cooked-meals-01.png" alt="Cooked Meals"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Cooked Meals</strong></h2>
 									</div>
 								</a>
@@ -245,7 +293,8 @@
 							<div id="vendor-category-10" class="vendor-category">
 								<a href="pet-food-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/pet-foods-01.png" alt="Pet Foods" style="width:100%; height:auto;">
+										<img class="image" src="images/pet-foods-01.png" alt="Pet Foods"
+											style="width:100%; height:auto;">
 										<h2 class="category-title"><strong>Pet Foods</strong></h2>
 									</div>
 								</a>
@@ -259,20 +308,30 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
-			<div class="container inner">
-				<section>
-					<h5><strong>Help us to tune the list better</strong></h5>
-					<ul class="icons">
-						<li><a href="https://github.com/lazpremarathna/covid-19-sl-vendors-list" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://www.facebook.com/groups/198483924918626/" target="_blank" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<div class="container inner">
+					<section>
+						<h5><strong>Help us to tune the list better</strong></h5>
+						<ul class="icons">
+							<li><a href="https://github.com/lazpremarathna/covid-19-sl-vendors-list" target="_blank"
+									class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.facebook.com/groups/198483924918626/" target="_blank"
+									class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
+							</li>
+						</ul>
+					</section>
+					<ul class="copyright">
+						<li>
+							<script>
+								document.write((new Date().getFullYear() - 1) + " - " + (new Date().getFullYear()));
+							</script> Covid Outbreak
+						</li>
+						<li>Design & Developed With <span><i class="fas fa-heart" style="color: #1400AD;"></i></span> in
+							SL</li>
+						<li>Illustrations: Freepik <a href="https://www.freepik.com/stories"
+								target="_blank">@Stories</a></li>
+						<li>Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></li>
 					</ul>
-				</section>
-				<ul class="copyright">
-					<li>Design & Developed With <span><i class="fas fa-heart" style="color: #1400AD;"></i></span> in SL</li>
-					<li>Illustrations: Freepik <a href="https://www.freepik.com/stories" target="_blank">@Stories</a></li>
-					<li>Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></li>
-				</ul>
-			</div>
+				</div>
 		</footer>
 
 	</div>
