--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">COVID 19 RESOURCE FINDER</a>
+			<a class="navbar-brand" href="https://lk.covid19resourcefinder.com/">COVID 19 RESOURCE FINDER</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
 				aria-controls="navbarsExample" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
