--- a/grocery-vendors.html
+++ b/grocery-vendors.html
@@ -53,7 +53,7 @@
 
 	<!-- Custom CSS -->
 	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
-	<link href="assets/css/button.css" rel="stylesheet" type="text/css">
+	<!-- <link href="assets/css/button.css" rel="stylesheet" type="text/css"> -->
 
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
