--- a/fruits-&-vegetables-vendors.html
+++ b/fruits-&-vegetables-vendors.html
@@ -41,8 +41,8 @@
 	<!-- Appearance -->
 	<meta name="theme-color" content="#1400AD">
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="https://covidsl.com/static/favicon.png">
-	<link rel="icon" href="https://covidsl.com/static/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://lk.covid19resourcefinder.com/favicon.png">
+	<link rel="icon" href="https://lk.covid19resourcefinder.com/favicon.png" type="image/x-icon">
 	<!-- Bootstrap v4.1.3 Core CSS -->
 	<link rel="stylesheet" id="bootstrap_v4.1.3_core_css"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -50,6 +50,7 @@
 	<link rel="stylesheet" id="muli"
 		href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800&display=swap">
 	<!-- Plugin CSS -->
+	<link id="animate.css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet" type="text/css">
 
 	<!-- Custom CSS -->
 	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
@@ -150,8 +151,8 @@
 			<div class="inner">
 				<div class="container inner">
 					<section>
-						<h5><strong>Help us to tune the list better</strong></h5>
-						<ul class="icons">
+						<h5 class="wow fadeInUp"><strong>Help us to tune the list better</strong></h5>
+						<ul class="icons wow fadeInUp">
 							<li><a href="https://github.com/lazpremarathna/covid-19-sl-vendors-list" target="_blank"
 									class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.facebook.com/groups/198483924918626/" target="_blank"
@@ -159,7 +160,12 @@
 							</li>
 						</ul>
 					</section>
-					<ul class="copyright">
+					<ul class="copyright wow fadeInUp">
+						<li>
+							<script>
+								document.write((new Date().getFullYear() - 1) + " - " + (new Date().getFullYear()));
+							</script> Covid Outbreak
+						</li>
 						<li>Design & Developed With <span><i class="fas fa-heart" style="color: #1400AD;"></i></span> in
 							SL</li>
 						<li>Illustrations: Freepik <a href="https://www.freepik.com/stories"
@@ -183,7 +189,7 @@
 
 	<!-- Plugin JavaScript -->
 	<script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
-	<!-- <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
 	<!-- Main Scripts -->
 	<script src="assets/js/main.js"></script>
