--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	<!-- Appearance -->
 	<meta name="theme-color" content="#1400AD">
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="https://covidsl.com/static/favicon.png">
-	<link rel="icon" href="https://covidsl.com/static/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://lk.covid19resourcefinder.com/images/favicon.png">
+	<link rel="icon" href="https://lk.covid19resourcefinder.com/images/favicon.png" type="image/x-icon">
 	<!-- Bootstrap v4.1.3 Core CSS -->
 	<link rel="stylesheet" id="bootstrap_v4.1.3_core_css"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -49,6 +49,7 @@
 	<link rel="stylesheet" id="muli"
 		href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800&display=swap">
 	<!-- Plugin CSS -->
+	<link id="animate.css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet" type="text/css">
 
 	<!-- Custom CSS -->
 	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
@@ -112,7 +113,7 @@
 		<div id="main" class="container">
 			<div class="inner container">
 				<section>
-					<div class="row help-them-banner">
+					<div class="row help-them-banner wow fadeInUp">
 						<div class="col-md-5">
 							<h1>Let’s<br />support<br />them.</h1>
 							<h4>by staying<br />where ever you are</h4>
@@ -122,9 +123,9 @@
 								style="width:100%; height:auto;">
 						</div>
 					</div>
-					<div class="row justify-content-center show-me-button">
+					<div class="row justify-content-center show-me-button wow fadeInUp" data-wow-delay="1s">
 						<div class="col-12" style="text-align:center;">
-							<a href="#vendors"><button class="button-covid">Show me the vendors list</button></a>
+							<a class="js-scroll-trigger" href="#vendors"><button class="button-covid">Show me the vendors list</button></a>
 						</div>
 					</div>
 				</section>
@@ -132,12 +133,12 @@
 				<section id="how-to-do" style="margin-top: 5em;">
 					<div class="row">
 						<div class="col-12">
-							<h2 class="type-2-heading">How...??</h2>
+							<h2 class="type-2-heading wow fadeInUp">How...??</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-4">
-							<div id="step-01" class="step">
+							<div id="step-01" class="step wow fadeInUp" data-wow-delay="1s">
 								<div class="square step-square">
 									<img src="images/find-what-ever-you-want-01.png" alt=""
 										style="width:100%; height:auto;">
@@ -149,7 +150,7 @@
 							</div>
 						</div>
 						<div class="col-md-4">
-							<div id="step-02" class="step">
+							<div id="step-02" class="step wow fadeInUp" data-wow-delay="1.5s">
 								<div class="square step-square">
 									<img src="images/contact-the-vendor-01.png" alt="" style="width:100%; height:auto;">
 								</div>
@@ -160,7 +161,7 @@
 							</div>
 						</div>
 						<div class="col-md-4">
-							<div id="step-03" class="step">
+							<div id="step-03" class="step wow fadeInUp" data-wow-delay="2s">
 								<div class="square step-square">
 									<img src="images/collect-them-at-your-doorstep-01.png" alt=""
 										style="width:100%; height:auto;">
@@ -177,13 +178,13 @@
 				<section id="vendors" style="margin-top: 5em;">
 					<div class="row">
 						<div class="col-12">
-							<h2 class="type-2-heading">Vendors</h2>
-							<p>*** Please note that, We cannot vouch for any of these vendors, please use caution. Also
+							<h2 class="type-2-heading wow fadeInUp">Vendors</h2>
+							<p class="wow fadeInUp">*** Please note that, We cannot vouch for any of these vendors, please use caution. Also
 								cannot promise they will pick up the phone and / or deliver as promised. This is merely
 								a list prepared for your convenience.</p>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row wow fadeInUp">
 						<div class="col-md-4">
 							<div id="vendor-category-01" class="vendor-category">
 								<a href="grocery-vendors.html">
@@ -218,7 +219,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row wow fadeInUp">
 						<div class="col-md-4">
 							<div id="vendor-category-04" class="vendor-category">
 								<a href="meat-&-fish-vendors.html">
@@ -253,7 +254,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row wow fadeInUp">
 						<div class="col-md-4">
 							<div id="vendor-category-07" class="vendor-category">
 								<a href="water-bottle-vendors.html">
@@ -288,7 +289,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row wow fadeInUp">
 						<div class="col-md-4">
 							<div id="vendor-category-10" class="vendor-category">
 								<a href="pet-food-vendors.html">
@@ -310,8 +311,8 @@
 			<div class="inner">
 				<div class="container inner">
 					<section>
-						<h5><strong>Help us to tune the list better</strong></h5>
-						<ul class="icons">
+						<h5 class="wow fadeInUp"><strong>Help us to tune the list better</strong></h5>
+						<ul class="icons wow fadeInUp">
 							<li><a href="https://github.com/lazpremarathna/covid-19-sl-vendors-list" target="_blank"
 									class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.facebook.com/groups/198483924918626/" target="_blank"
@@ -319,7 +320,7 @@
 							</li>
 						</ul>
 					</section>
-					<ul class="copyright">
+					<ul class="copyright wow fadeInUp">
 						<li>
 							<script>
 								document.write((new Date().getFullYear() - 1) + " - " + (new Date().getFullYear()));
@@ -347,6 +348,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 	<!-- Plugin JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
 	<!-- Main Scripts -->
 	<script src="assets/js/main.js"></script>
