--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					</div>
 					<div class="row justify-content-center show-me-button wow fadeInUp" data-wow-delay="1s">
 						<div class="col-12" style="text-align:center;">
-							<a class="js-scroll-trigger" href="#vendors"><button class="button-covid">Show me the vendors list</button></a>
+							<a class="js-scroll-trigger" href="#vendors"><button class="button-covid">Show me the vendor list</button></a>
 						</div>
 					</div>
 				</section>
