--- a/grocery-vendors.html
+++ b/grocery-vendors.html
@@ -96,7 +96,7 @@
 						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="medicines-vendors.html">MEDICINES</a>
+						<a class="nav-link" href="medicine-vendors.html">MEDICINE</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="">ABOUT</a>
