--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="medicines-vendors.html">MEDICINES</a>
+						<a class="nav-link" href="medicines-vendors.html">MEDICINE</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="">ABOUT</a>
@@ -268,11 +268,11 @@
 						</div>
 						<div class="col-md-4">
 							<div id="vendor-category-08" class="vendor-category">
-								<a href="medicines-vendors.html">
+								<a href="medicine-vendors.html">
 									<div class="square vendor-category-square">
-										<img class="image" src="images/medicines-01.png" alt="Medicines"
+										<img class="image" src="images/medicine-01.png" alt="Medicine"
 											style="width:100%; height:auto;">
-										<h2 class="category-title"><strong>Medicines</strong></h2>
+										<h2 class="category-title"><strong>Medicine</strong></h2>
 									</div>
 								</a>
 							</div>
