--- a/medicine-vendors.html
+++ b/medicine-vendors.html
@@ -95,7 +95,7 @@
 						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="medicines-vendors.html">MEDICINES</a>
+						<a class="nav-link" href="medicine-vendors.html">MEDICINE</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="">ABOUT</a>
@@ -110,20 +110,20 @@
 		<!-- Main -->
 		<div id="main" class="container">
 			<div class="inner container">
-				<section id="medicines-vendors" style="margin-top: 5em;">
+				<section id="medicine-vendors" style="margin-top: 5em;">
 					<div class="row">
 						<div class="col-12">
-							<h2 class="type-2-heading">Medicines Vendors</h2>
+							<h2 class="type-2-heading">Medicine Vendors</h2>
 							<p>*** Please note that, We cannot vouch for any of these vendors, please use caution. Also
 								cannot promise they will pick up the phone and / or deliver as promised. This is merely
 								a list prepared for your convenience.</p>
 						</div>
 					</div>
 					<table
-						id="medicines-table"
+						id="medicine-table"
 						data-toggle="table"
 						data-remember-order="true"
-						data-url="vendors/medicines-vendors.json"
+						data-url="vendors/medicine-vendors.json"
 						data-pagination="true"
 						data-pagination-loop="false"
 						data-page-size="25"
