--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<a class="nav-link" href="gas-vendors.html">GAS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="medicines-vendors.html">MEDICINE</a>
+						<a class="nav-link" href="medicine-vendors.html">MEDICINE</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="">ABOUT</a>
